tryed some js for my input, but doesnt work

--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
   </head>
   <body>
     <header class="navigation_top">
-      <a href="#" class="navigation_top-links">Trips</a>
+      <a href="#" class="navigation_top-links"
+        ><img
+          src="/pictures/alt_route_FILL0_wght400_GRAD0_opsz48.png"
+          alt=""
+          class="icons"
+      /></a>
       <h1>Tripgether</h1>
-      <a href="#" class="navigation_top-links">Share</a>
+      <a href="#" class="navigation_top-links"
+        ><img
+          src="/pictures/ios_share_FILL0_wght400_GRAD0_opsz48.png"
+          alt=""
+          class="icons"
+      /></a>
     </header>
     <main class="main">
       <section class="berechnungstabelle">
         <section class="input">
           <label for="input">Anzahl Personen</label>
-          <input type="number" data-js="anzahlpersonen" class="inputfield" />
+          <input
+            name="input"
+            type="number"
+            data-js="anzahlpersonen"
+            class="inputfield"
+          />
         </section>
         <section class="input">
           <label for="input">Anzahl km</label>
@@ -41,9 +56,24 @@
       </section>
     </main>
     <footer class="navigation_bottom">
-      <a href="#" class="navigation_bottom-link">Übersicht</a>
-      <a href="#" class="navigation_bottom-link">Neuer Trip</a>
-      <a href="#" class="navigation_bottom-link">Teilstrecken</a>
+      <a href="#" class="navigation_bottom-link"
+        ><img
+          src="/pictures/home_FILL0_wght400_GRAD0_opsz48.png"
+          alt=""
+          class="icons"
+      /></a>
+      <a href="#" class="navigation_bottom-link"
+        ><img
+          src="/pictures/add_FILL0_wght400_GRAD0_opsz48.png"
+          alt=""
+          class="icons"
+      /></a>
+      <a href="#" class="navigation_bottom-link"
+        ><img
+          src="/pictures/settings_FILL0_wght400_GRAD0_opsz48.png"
+          alt=""
+          class="icons"
+      /></a>
     </footer>
   </body>
 </html>
