fixed js code/ input and output is working

--- a/index.html
+++ b/index.html
@@ -27,27 +27,42 @@
     <main class="main">
       <section class="berechnungstabelle">
         <section class="input">
-          <label for="input">Anzahl Personen</label>
+          <label for="inputAP">Anzahl Personen</label>
           <input
-            name="input"
+            name="inputAP"
             type="number"
-            data-js="anzahlpersonen"
+            data-js="inputAP"
             class="inputfield"
           />
         </section>
         <section class="input">
-          <label for="input">Anzahl km</label>
-          <input type="number" data-js="anzahlkm" class="inputfield" />
+          <label for="inputKM">Anzahl km</label>
+          <input
+            name="imputKM"
+            type="number"
+            data-js="inputKM"
+            class="inputfield"
+          />
         </section>
         <section class="input">
-          <label for="input">Sprit-Preis pro Liter</label>
-          <input type="number" data-js="preisproliter" class="inputfield" />
+          <label for="inputPreis">Sprit-Preis pro Liter</label>
+          <input
+            name="inputPreis"
+            type="number"
+            data-js="inputPreis"
+            class="inputfield"
+          />
         </section>
         <section class="input">
-          <label for="input">Verbrauch in Liter</label>
-          <input type="number" data-js="verbrauch" class="inputfield" />
+          <label for="inputVerbrauch">Verbrauch in Liter</label>
+          <input
+            name="inputVerbrauch"
+            type="number"
+            data-js="inputVerbrauch"
+            class="inputfield"
+          />
         </section>
-        <section class="berechnen">
+        <section class="input">
           <button type="button" class="berechnen_btn" data-js="btnBerechnen">
             Berechnen
           </button>
