--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <main class="main">
       <section class="berechnungstabelle">
         <section class="input">
-          <label for="inputAP">Anzahl Personen</label>
           <input
+            placeholder="Anzahl Personen"
             name="inputAP"
             type="number"
             data-js="inputAP"
@@ -36,8 +36,8 @@
           />
         </section>
         <section class="input">
-          <label for="inputKM">Anzahl km</label>
           <input
+            placeholder="Anzahl Km"
             name="imputKM"
             type="number"
             data-js="inputKM"
@@ -45,8 +45,8 @@
           />
         </section>
         <section class="input">
-          <label for="inputPreis">Sprit-Preis pro Liter</label>
           <input
+            placeholder="Preis pro Liter"
             name="inputPreis"
             type="number"
             data-js="inputPreis"
@@ -54,8 +54,8 @@
           />
         </section>
         <section class="input">
-          <label for="inputVerbrauch">Verbrauch in Liter</label>
           <input
+            placeholder="Verbrauch auf 100km"
             name="inputVerbrauch"
             type="number"
             data-js="inputVerbrauch"
