designed and created new output field

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
           />
         </section>
         <section class="input">
+          <output js-data="output" class="output">Ergebnis</output>
+          <!-- <p js-data="output" class="output"></p> -->
           <button type="button" class="berechnen_btn" data-js="btnBerechnen">
             Berechnen
           </button>
-          <p js-data="output" class="output"></p>
         </section>
       </section>
     </main>
