--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header class="navigation_top">
       <a href="#" class="navigation_top-links"
         ><img
-          src="/pictures/alt_route_FILL0_wght400_GRAD0_opsz48.png"
+          src="/pictures/ios_share_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
       /></a>
       <h1>Tripgether</h1>
       <a href="#" class="navigation_top-links"
         ><img
-          src="/pictures/ios_share_FILL0_wght400_GRAD0_opsz48.png"
+          src="/pictures/settings_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
       /></a>
@@ -72,21 +72,21 @@
       </section>
     </main>
     <footer class="navigation_bottom">
-      <a href="#" class="navigation_bottom-link"
+      <a href="#" class="navigation_bottom-link" data-js="delete"
         ><img
-          src="/pictures/home_FILL0_wght400_GRAD0_opsz48.png"
+          src="/pictures/delete_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
       /></a>
       <a href="#" class="navigation_bottom-link"
         ><img
-          src="/pictures/add_FILL0_wght400_GRAD0_opsz48.png"
+          src="/pictures/bookmark_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
       /></a>
       <a href="#" class="navigation_bottom-link"
         ><img
-          src="/pictures/settings_FILL0_wght400_GRAD0_opsz48.png"
+          src="/pictures/bookmarks_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
       /></a>
