add reset button and logo

--- a/index.html
+++ b/index.html
@@ -72,12 +72,18 @@
       </section>
     </main>
     <footer class="navigation_bottom">
-      <a href="#" class="navigation_bottom-link" data-js="delete"
-        ><img
+      <button
+        data-js="deleteBTN"
+        class="deleteBTN"
+        class="navigation_bottom-link"
+        class="footerBTN"
+      >
+        <img
           src="/pictures/delete_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
           class="icons"
-      /></a>
+        />
+      </button>
       <a href="#" class="navigation_bottom-link"
         ><img
           src="/pictures/bookmark_FILL0_wght400_GRAD0_opsz48.png"
