--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           alt=""
           class="icons"
       /></a>
-      <h1>Tripgether</h1>
+      <!-- <h1>Tripgether</h1> -->
+      <img
+        src="/pictures/Bildschirmfoto 2022-11-02 um 10.43.19.png"
+        alt="logo"
+        class="logo"
+      />
       <a href="#" class="navigation_top-links"
         ><img
           src="/pictures/settings_FILL0_wght400_GRAD0_opsz48.png"
