add setting page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         alt="logo"
         class="logo"
       />
-      <a href="#" class="navigation_top-links"
+      <a href="/settings.html" class="navigation_top-links"
         ><img
           src="/pictures/settings_FILL0_wght400_GRAD0_opsz48.png"
           alt=""
